2_Parser/src/y.output
Terminals unused in grammar

    ERROR


Rules useless in parser due to conflicts

   67 args: %empty


State 34 충돌: 1 쉬프트/리듀스
State 36 충돌: 1 쉬프트/리듀스
State 46 충돌: 1 쉬프트/리듀스
State 88 충돌: 1 리듀스/리듀스
State 95 충돌: 1 쉬프트/리듀스
State 96 충돌: 1 쉬프트/리듀스
State 105 충돌: 1 쉬프트/리듀스


문법

    0 $accept: program $end

    1 program: dcl_list

    2 dcl_list: dcl_list dcl
    3         | dcl

    4 dcl: var_dcl
    5    | fun_dcl

    6 var_dcl: nv_dcl SEMI
    7        | arr_dcl SEMI

    8 prim_dcl: INT ID
    9         | VOID ID

   10 nv_dcl: prim_dcl

   11 $@1: %empty

   12 arr_dcl: prim_dcl LBRACE NUM $@1 RBRACE

   13 fun_dcl: prim_dcl LPAREN params RPAREN cmpnd_stmt

   14 params: param_list
   15       | VOID

   16 param_list: param_list COMMA param
   17           | param

   18 param: prim_dcl
   19      | prim_dcl LBRACE RBRACE

   20 cmpnd_stmt: LCURLY local_dcls stmt_list RCURLY

   21 local_dcls: local_dcls var_dcl
   22           | %empty

   23 stmt_list: stmt_list_
   24          | %empty

   25 stmt_list_: stmt_list_ stmt
   26           | stmt

   27 stmt: select_stmt
   28     | exp_stmt
   29     | cmpnd_stmt
   30     | iter_stmt
   31     | return_stmt

   32 exp_stmt: exp SEMI
   33         | SEMI

   34 select_stmt: IF LPAREN exp RPAREN stmt
   35            | IF LPAREN exp RPAREN stmt ELSE stmt

   36 iter_stmt: WHILE LPAREN exp RPAREN stmt

   37 return_stmt: RETURN SEMI
   38            | RETURN exp SEMI

   39 exp: var ASSIGN exp
   40    | simple_exp

   41 id_var: ID

   42 var: %empty
   43    | id_var LBRACE exp RBRACE

   44 simple_exp: addt_exp relop addt_exp
   45           | addt_exp

   46 relop: LE
   47      | LT
   48      | GT
   49      | GE
   50      | EQ
   51      | NE

   52 addt_exp: addt_exp addop term
   53         | term

   54 addop: PLUS
   55      | MINUS

   56 term: term mulop factor
   57     | factor

   58 mulop: TIMES
   59      | OVER

   60 factor: LPAREN exp RPAREN
   61       | var
   62       | call
   63       | NUM

   64 $@2: %empty

   65 call: ID $@2 LPAREN args RPAREN

   66 args: arg_list
   67     | %empty

   68 arg_list: arg_list COMMA exp
   69         | exp


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF (258) 34 35
    ELSE (259) 35
    RETURN (260) 37 38
    WHILE (261) 36
    INT (262) 8
    VOID (263) 9 15
    PLUS (264) 54
    MINUS (265) 55
    TIMES (266) 58
    OVER (267) 59
    EQ (268) 50
    NE (269) 51
    LT (270) 47
    LE (271) 46
    GT (272) 48
    GE (273) 49
    ASSIGN (274) 39
    LPAREN (275) 13 34 35 36 60 65
    RPAREN (276) 13 34 35 36 60 65
    LBRACE (277) 12 19 43
    RBRACE (278) 12 19 43
    LCURLY (279) 20
    RCURLY (280) 20
    SEMI (281) 6 7 32 33 37 38
    COMMA (282) 16 68
    ID (283) 8 9 41 65
    NUM (284) 12 63
    ERROR (285)
    IFX (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program (33)
        on left: 1
        on right: 0
    dcl_list (34)
        on left: 2 3
        on right: 1 2
    dcl (35)
        on left: 4 5
        on right: 2 3
    var_dcl (36)
        on left: 6 7
        on right: 4 21
    prim_dcl (37)
        on left: 8 9
        on right: 10 12 13 18 19
    nv_dcl (38)
        on left: 10
        on right: 6
    arr_dcl (39)
        on left: 12
        on right: 7
    $@1 (40)
        on left: 11
        on right: 12
    fun_dcl (41)
        on left: 13
        on right: 5
    params (42)
        on left: 14 15
        on right: 13
    param_list (43)
        on left: 16 17
        on right: 14 16
    param (44)
        on left: 18 19
        on right: 16 17
    cmpnd_stmt (45)
        on left: 20
        on right: 13 29
    local_dcls (46)
        on left: 21 22
        on right: 20 21
    stmt_list (47)
        on left: 23 24
        on right: 20
    stmt_list_ (48)
        on left: 25 26
        on right: 23 25
    stmt (49)
        on left: 27 28 29 30 31
        on right: 25 26 34 35 36
    exp_stmt (50)
        on left: 32 33
        on right: 28
    select_stmt (51)
        on left: 34 35
        on right: 27
    iter_stmt (52)
        on left: 36
        on right: 30
    return_stmt (53)
        on left: 37 38
        on right: 31
    exp (54)
        on left: 39 40
        on right: 32 34 35 36 38 39 43 60 68 69
    id_var (55)
        on left: 41
        on right: 43
    var (56)
        on left: 42 43
        on right: 39 61
    simple_exp (57)
        on left: 44 45
        on right: 40
    relop (58)
        on left: 46 47 48 49 50 51
        on right: 44
    addt_exp (59)
        on left: 52 53
        on right: 44 45 52
    addop (60)
        on left: 54 55
        on right: 52
    term (61)
        on left: 56 57
        on right: 52 53 56
    mulop (62)
        on left: 58 59
        on right: 56
    factor (63)
        on left: 60 61 62 63
        on right: 56 57
    call (64)
        on left: 65
        on right: 62
    $@2 (65)
        on left: 64
        on right: 65
    args (66)
        on left: 66 67
        on right: 65
    arg_list (67)
        on left: 68 69
        on right: 66 68


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    program   go to state 3
    dcl_list  go to state 4
    dcl       go to state 5
    var_dcl   go to state 6
    prim_dcl  go to state 7
    nv_dcl    go to state 8
    arr_dcl   go to state 9
    fun_dcl   go to state 10


State 1

    8 prim_dcl: INT . ID

    ID  shift, and go to state 11


State 2

    9 prim_dcl: VOID . ID

    ID  shift, and go to state 12


State 3

    0 $accept: program . $end

    $end  shift, and go to state 13


State 4

    1 program: dcl_list .
    2 dcl_list: dcl_list . dcl

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (program)

    dcl       go to state 14
    var_dcl   go to state 6
    prim_dcl  go to state 7
    nv_dcl    go to state 8
    arr_dcl   go to state 9
    fun_dcl   go to state 10


State 5

    3 dcl_list: dcl .

    $default  reduce using rule 3 (dcl_list)


State 6

    4 dcl: var_dcl .

    $default  reduce using rule 4 (dcl)


State 7

   10 nv_dcl: prim_dcl .
   12 arr_dcl: prim_dcl . LBRACE NUM $@1 RBRACE
   13 fun_dcl: prim_dcl . LPAREN params RPAREN cmpnd_stmt

    LPAREN  shift, and go to state 15
    LBRACE  shift, and go to state 16

    $default  reduce using rule 10 (nv_dcl)


State 8

    6 var_dcl: nv_dcl . SEMI

    SEMI  shift, and go to state 17


State 9

    7 var_dcl: arr_dcl . SEMI

    SEMI  shift, and go to state 18


State 10

    5 dcl: fun_dcl .

    $default  reduce using rule 5 (dcl)


State 11

    8 prim_dcl: INT ID .

    $default  reduce using rule 8 (prim_dcl)


State 12

    9 prim_dcl: VOID ID .

    $default  reduce using rule 9 (prim_dcl)


State 13

    0 $accept: program $end .

    $default  accept


State 14

    2 dcl_list: dcl_list dcl .

    $default  reduce using rule 2 (dcl_list)


State 15

   13 fun_dcl: prim_dcl LPAREN . params RPAREN cmpnd_stmt

    INT   shift, and go to state 1
    VOID  shift, and go to state 19

    prim_dcl    go to state 20
    params      go to state 21
    param_list  go to state 22
    param       go to state 23


State 16

   12 arr_dcl: prim_dcl LBRACE . NUM $@1 RBRACE

    NUM  shift, and go to state 24


State 17

    6 var_dcl: nv_dcl SEMI .

    $default  reduce using rule 6 (var_dcl)


State 18

    7 var_dcl: arr_dcl SEMI .

    $default  reduce using rule 7 (var_dcl)


State 19

    9 prim_dcl: VOID . ID
   15 params: VOID .

    ID  shift, and go to state 12

    $default  reduce using rule 15 (params)


State 20

   18 param: prim_dcl .
   19      | prim_dcl . LBRACE RBRACE

    LBRACE  shift, and go to state 25

    $default  reduce using rule 18 (param)


State 21

   13 fun_dcl: prim_dcl LPAREN params . RPAREN cmpnd_stmt

    RPAREN  shift, and go to state 26


State 22

   14 params: param_list .
   16 param_list: param_list . COMMA param

    COMMA  shift, and go to state 27

    $default  reduce using rule 14 (params)


State 23

   17 param_list: param .

    $default  reduce using rule 17 (param_list)


State 24

   12 arr_dcl: prim_dcl LBRACE NUM . $@1 RBRACE

    $default  reduce using rule 11 ($@1)

    $@1  go to state 28


State 25

   19 param: prim_dcl LBRACE . RBRACE

    RBRACE  shift, and go to state 29


State 26

   13 fun_dcl: prim_dcl LPAREN params RPAREN . cmpnd_stmt

    LCURLY  shift, and go to state 30

    cmpnd_stmt  go to state 31


State 27

   16 param_list: param_list COMMA . param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    prim_dcl  go to state 20
    param     go to state 32


State 28

   12 arr_dcl: prim_dcl LBRACE NUM $@1 . RBRACE

    RBRACE  shift, and go to state 33


State 29

   19 param: prim_dcl LBRACE RBRACE .

    $default  reduce using rule 19 (param)


State 30

   20 cmpnd_stmt: LCURLY . local_dcls stmt_list RCURLY

    $default  reduce using rule 22 (local_dcls)

    local_dcls  go to state 34


State 31

   13 fun_dcl: prim_dcl LPAREN params RPAREN cmpnd_stmt .

    $default  reduce using rule 13 (fun_dcl)


State 32

   16 param_list: param_list COMMA param .

    $default  reduce using rule 16 (param_list)


State 33

   12 arr_dcl: prim_dcl LBRACE NUM $@1 RBRACE .

    $default  reduce using rule 12 (arr_dcl)


State 34

   20 cmpnd_stmt: LCURLY local_dcls . stmt_list RCURLY
   21 local_dcls: local_dcls . var_dcl

    IF      shift, and go to state 35
    RETURN  shift, and go to state 36
    WHILE   shift, and go to state 37
    INT     shift, and go to state 1
    VOID    shift, and go to state 2
    LPAREN  shift, and go to state 38
    LCURLY  shift, and go to state 30
    SEMI    shift, and go to state 39
    ID      shift, and go to state 40
    NUM     shift, and go to state 41

    RCURLY    reduce using rule 24 (stmt_list)
    SEMI      [reduce using rule 42 (var)]
    $default  reduce using rule 42 (var)

    var_dcl      go to state 42
    prim_dcl     go to state 43
    nv_dcl       go to state 8
    arr_dcl      go to state 9
    cmpnd_stmt   go to state 44
    stmt_list    go to state 45
    stmt_list_   go to state 46
    stmt         go to state 47
    exp_stmt     go to state 48
    select_stmt  go to state 49
    iter_stmt    go to state 50
    return_stmt  go to state 51
    exp          go to state 52
    id_var       go to state 53
    var          go to state 54
    simple_exp   go to state 55
    addt_exp     go to state 56
    term         go to state 57
    factor       go to state 58
    call         go to state 59


State 35

   34 select_stmt: IF . LPAREN exp RPAREN stmt
   35            | IF . LPAREN exp RPAREN stmt ELSE stmt

    LPAREN  shift, and go to state 60


State 36

   37 return_stmt: RETURN . SEMI
   38            | RETURN . exp SEMI

    LPAREN  shift, and go to state 38
    SEMI    shift, and go to state 61
    ID      shift, and go to state 40
    NUM     shift, and go to state 41

    SEMI      [reduce using rule 42 (var)]
    $default  reduce using rule 42 (var)

    exp         go to state 62
    id_var      go to state 53
    var         go to state 54
    simple_exp  go to state 55
    addt_exp    go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 37

   36 iter_stmt: WHILE . LPAREN exp RPAREN stmt

    LPAREN  shift, and go to state 63


State 38

   60 factor: LPAREN . exp RPAREN

    LPAREN  shift, and go to state 38
    ID      shift, and go to state 40
    NUM     shift, and go to state 41

    $default  reduce using rule 42 (var)

    exp         go to state 64
    id_var      go to state 53
    var         go to state 54
    simple_exp  go to state 55
    addt_exp    go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 39

   33 exp_stmt: SEMI .

    $default  reduce using rule 33 (exp_stmt)


State 40

   41 id_var: ID .
   65 call: ID . $@2 LPAREN args RPAREN

    LPAREN    reduce using rule 64 ($@2)
    $default  reduce using rule 41 (id_var)

    $@2  go to state 65


State 41

   63 factor: NUM .

    $default  reduce using rule 63 (factor)


State 42

   21 local_dcls: local_dcls var_dcl .

    $default  reduce using rule 21 (local_dcls)


State 43

   10 nv_dcl: prim_dcl .
   12 arr_dcl: prim_dcl . LBRACE NUM $@1 RBRACE

    LBRACE  shift, and go to state 16

    $default  reduce using rule 10 (nv_dcl)


State 44

   29 stmt: cmpnd_stmt .

    $default  reduce using rule 29 (stmt)


State 45

   20 cmpnd_stmt: LCURLY local_dcls stmt_list . RCURLY

    RCURLY  shift, and go to state 66


State 46

   23 stmt_list: stmt_list_ .
   25 stmt_list_: stmt_list_ . stmt

    IF      shift, and go to state 35
    RETURN  shift, and go to state 36
    WHILE   shift, and go to state 37
    LPAREN  shift, and go to state 38
    LCURLY  shift, and go to state 30
    SEMI    shift, and go to state 39
    ID      shift, and go to state 40
    NUM     shift, and go to state 41

    RCURLY    reduce using rule 23 (stmt_list)
    SEMI      [reduce using rule 42 (var)]
    $default  reduce using rule 42 (var)

    cmpnd_stmt   go to state 44
    stmt         go to state 67
    exp_stmt     go to state 48
    select_stmt  go to state 49
    iter_stmt    go to state 50
    return_stmt  go to state 51
    exp          go to state 52
    id_var       go to state 53
    var          go to state 54
    simple_exp   go to state 55
    addt_exp     go to state 56
    term         go to state 57
    factor       go to state 58
    call         go to state 59


State 47

   26 stmt_list_: stmt .

    $default  reduce using rule 26 (stmt_list_)


State 48

   28 stmt: exp_stmt .

    $default  reduce using rule 28 (stmt)


State 49

   27 stmt: select_stmt .

    $default  reduce using rule 27 (stmt)


State 50

   30 stmt: iter_stmt .

    $default  reduce using rule 30 (stmt)


State 51

   31 stmt: return_stmt .

    $default  reduce using rule 31 (stmt)


State 52

   32 exp_stmt: exp . SEMI

    SEMI  shift, and go to state 68


State 53

   43 var: id_var . LBRACE exp RBRACE

    LBRACE  shift, and go to state 69


State 54

   39 exp: var . ASSIGN exp
   61 factor: var .

    ASSIGN  shift, and go to state 70

    $default  reduce using rule 61 (factor)


State 55

   40 exp: simple_exp .

    $default  reduce using rule 40 (exp)


State 56

   44 simple_exp: addt_exp . relop addt_exp
   45           | addt_exp .
   52 addt_exp: addt_exp . addop term

    PLUS   shift, and go to state 71
    MINUS  shift, and go to state 72
    EQ     shift, and go to state 73
    NE     shift, and go to state 74
    LT     shift, and go to state 75
    LE     shift, and go to state 76
    GT     shift, and go to state 77
    GE     shift, and go to state 78

    $default  reduce using rule 45 (simple_exp)

    relop  go to state 79
    addop  go to state 80


State 57

   53 addt_exp: term .
   56 term: term . mulop factor

    TIMES  shift, and go to state 81
    OVER   shift, and go to state 82

    $default  reduce using rule 53 (addt_exp)

    mulop  go to state 83


State 58

   57 term: factor .

    $default  reduce using rule 57 (term)


State 59

   62 factor: call .

    $default  reduce using rule 62 (factor)


State 60

   34 select_stmt: IF LPAREN . exp RPAREN stmt
   35            | IF LPAREN . exp RPAREN stmt ELSE stmt

    LPAREN  shift, and go to state 38
    ID      shift, and go to state 40
    NUM     shift, and go to state 41

    $default  reduce using rule 42 (var)

    exp         go to state 84
    id_var      go to state 53
    var         go to state 54
    simple_exp  go to state 55
    addt_exp    go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 61

   37 return_stmt: RETURN SEMI .

    $default  reduce using rule 37 (return_stmt)


State 62

   38 return_stmt: RETURN exp . SEMI

    SEMI  shift, and go to state 85


State 63

   36 iter_stmt: WHILE LPAREN . exp RPAREN stmt

    LPAREN  shift, and go to state 38
    ID      shift, and go to state 40
    NUM     shift, and go to state 41

    $default  reduce using rule 42 (var)

    exp         go to state 86
    id_var      go to state 53
    var         go to state 54
    simple_exp  go to state 55
    addt_exp    go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 64

   60 factor: LPAREN exp . RPAREN

    RPAREN  shift, and go to state 87


State 65

   65 call: ID $@2 . LPAREN args RPAREN

    LPAREN  shift, and go to state 88


State 66

   20 cmpnd_stmt: LCURLY local_dcls stmt_list RCURLY .

    $default  reduce using rule 20 (cmpnd_stmt)


State 67

   25 stmt_list_: stmt_list_ stmt .

    $default  reduce using rule 25 (stmt_list_)


State 68

   32 exp_stmt: exp SEMI .

    $default  reduce using rule 32 (exp_stmt)


State 69

   43 var: id_var LBRACE . exp RBRACE

    LPAREN  shift, and go to state 38
    ID      shift, and go to state 40
    NUM     shift, and go to state 41

    $default  reduce using rule 42 (var)

    exp         go to state 89
    id_var      go to state 53
    var         go to state 54
    simple_exp  go to state 55
    addt_exp    go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 70

   39 exp: var ASSIGN . exp

    LPAREN  shift, and go to state 38
    ID      shift, and go to state 40
    NUM     shift, and go to state 41

    $default  reduce using rule 42 (var)

    exp         go to state 90
    id_var      go to state 53
    var         go to state 54
    simple_exp  go to state 55
    addt_exp    go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59


State 71

   54 addop: PLUS .

    $default  reduce using rule 54 (addop)


State 72

   55 addop: MINUS .

    $default  reduce using rule 55 (addop)


State 73

   50 relop: EQ .

    $default  reduce using rule 50 (relop)


State 74

   51 relop: NE .

    $default  reduce using rule 51 (relop)


State 75

   47 relop: LT .

    $default  reduce using rule 47 (relop)


State 76

   46 relop: LE .

    $default  reduce using rule 46 (relop)


State 77

   48 relop: GT .

    $default  reduce using rule 48 (relop)


State 78

   49 relop: GE .

    $default  reduce using rule 49 (relop)


State 79

   44 simple_exp: addt_exp relop . addt_exp

    LPAREN  shift, and go to state 38
    ID      shift, and go to state 40
    NUM     shift, and go to state 41

    $default  reduce using rule 42 (var)

    id_var    go to state 53
    var       go to state 91
    addt_exp  go to state 92
    term      go to state 57
    factor    go to state 58
    call      go to state 59


State 80

   52 addt_exp: addt_exp addop . term

    LPAREN  shift, and go to state 38
    ID      shift, and go to state 40
    NUM     shift, and go to state 41

    $default  reduce using rule 42 (var)

    id_var  go to state 53
    var     go to state 91
    term    go to state 93
    factor  go to state 58
    call    go to state 59


State 81

   58 mulop: TIMES .

    $default  reduce using rule 58 (mulop)


State 82

   59 mulop: OVER .

    $default  reduce using rule 59 (mulop)


State 83

   56 term: term mulop . factor

    LPAREN  shift, and go to state 38
    ID      shift, and go to state 40
    NUM     shift, and go to state 41

    $default  reduce using rule 42 (var)

    id_var  go to state 53
    var     go to state 91
    factor  go to state 94
    call    go to state 59


State 84

   34 select_stmt: IF LPAREN exp . RPAREN stmt
   35            | IF LPAREN exp . RPAREN stmt ELSE stmt

    RPAREN  shift, and go to state 95


State 85

   38 return_stmt: RETURN exp SEMI .

    $default  reduce using rule 38 (return_stmt)


State 86

   36 iter_stmt: WHILE LPAREN exp . RPAREN stmt

    RPAREN  shift, and go to state 96


State 87

   60 factor: LPAREN exp RPAREN .

    $default  reduce using rule 60 (factor)


State 88

   65 call: ID $@2 LPAREN . args RPAREN

    LPAREN  shift, and go to state 38
    ID      shift, and go to state 40
    NUM     shift, and go to state 41

    RPAREN    reduce using rule 42 (var)
    RPAREN    [reduce using rule 67 (args)]
    $default  reduce using rule 42 (var)

    exp         go to state 97
    id_var      go to state 53
    var         go to state 54
    simple_exp  go to state 55
    addt_exp    go to state 56
    term        go to state 57
    factor      go to state 58
    call        go to state 59
    args        go to state 98
    arg_list    go to state 99


State 89

   43 var: id_var LBRACE exp . RBRACE

    RBRACE  shift, and go to state 100


State 90

   39 exp: var ASSIGN exp .

    $default  reduce using rule 39 (exp)


State 91

   61 factor: var .

    $default  reduce using rule 61 (factor)


State 92

   44 simple_exp: addt_exp relop addt_exp .
   52 addt_exp: addt_exp . addop term

    PLUS   shift, and go to state 71
    MINUS  shift, and go to state 72

    $default  reduce using rule 44 (simple_exp)

    addop  go to state 80


State 93

   52 addt_exp: addt_exp addop term .
   56 term: term . mulop factor

    TIMES  shift, and go to state 81
    OVER   shift, and go to state 82

    $default  reduce using rule 52 (addt_exp)

    mulop  go to state 83


State 94

   56 term: term mulop factor .

    $default  reduce using rule 56 (term)


State 95

   34 select_stmt: IF LPAREN exp RPAREN . stmt
   35            | IF LPAREN exp RPAREN . stmt ELSE stmt

    IF      shift, and go to state 35
    RETURN  shift, and go to state 36
    WHILE   shift, and go to state 37
    LPAREN  shift, and go to state 38
    LCURLY  shift, and go to state 30
    SEMI    shift, and go to state 39
    ID      shift, and go to state 40
    NUM     shift, and go to state 41

    SEMI      [reduce using rule 42 (var)]
    $default  reduce using rule 42 (var)

    cmpnd_stmt   go to state 44
    stmt         go to state 101
    exp_stmt     go to state 48
    select_stmt  go to state 49
    iter_stmt    go to state 50
    return_stmt  go to state 51
    exp          go to state 52
    id_var       go to state 53
    var          go to state 54
    simple_exp   go to state 55
    addt_exp     go to state 56
    term         go to state 57
    factor       go to state 58
    call         go to state 59


State 96

   36 iter_stmt: WHILE LPAREN exp RPAREN . stmt

    IF      shift, and go to state 35
    RETURN  shift, and go to state 36
    WHILE   shift, and go to state 37
    LPAREN  shift, and go to state 38
    LCURLY  shift, and go to state 30
    SEMI    shift, and go to state 39
    ID      shift, and go to state 40
    NUM     shift, and go to state 41

    SEMI      [reduce using rule 42 (var)]
    $default  reduce using rule 42 (var)

    cmpnd_stmt   go to state 44
    stmt         go to state 102
    exp_stmt     go to state 48
    select_stmt  go to state 49
    iter_stmt    go to state 50
    return_stmt  go to state 51
    exp          go to state 52
    id_var       go to state 53
    var          go to state 54
    simple_exp   go to state 55
    addt_exp     go to state 56
    term         go to state 57
    factor       go to state 58
    call         go to state 59


State 97

   69 arg_list: exp .

    $default  reduce using rule 69 (arg_list)


State 98

   65 call: ID $@2 LPAREN args . RPAREN

    RPAREN  shift, and go to state 103


State 99

   66 args: arg_list .
   68 arg_list: arg_list . COMMA exp

    COMMA  shift, and go to state 104

    $default  reduce using rule 66 (args)


State 100

   43 var: id_var LBRACE exp RBRACE .

    $default  reduce using rule 43 (var)


State 101

   34 select_stmt: IF LPAREN exp RPAREN stmt .
   35            | IF LPAREN exp RPAREN stmt . ELSE stmt

    ELSE  shift, and go to state 105

    $default  reduce using rule 34 (select_stmt)


State 102

   36 iter_stmt: WHILE LPAREN exp RPAREN stmt .

    $default  reduce using rule 36 (iter_stmt)


State 103

   65 call: ID $@2 LPAREN args RPAREN .

    $default  reduce using rule 65 (call)


State 104

   68 arg_list: arg_list COMMA . exp
